fix(search-options): improve animation and  decrease gap

--- a/app/assets/stylesheets/_notes.scss
+++ b/app/assets/stylesheets/_notes.scss
@@ -79,7 +79,7 @@
 
       display: grid;
       grid-template-columns: repeat( 3, 1fr );
-      gap: 0.875rem;
+      gap: .5rem;
 
       font-size: var(--sn-stylekit-font-size-p);
       white-space: nowrap;
